# paperpilot-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cases/ci_demo_case/: case_config.yaml
cases/example_baseline_case/: case_config.yaml
cases/my_baseline_case_001/: case_config.yaml
docs/: agent_audit.md  agent_roles.md  agents.md  architecture.md  legacy_experiments.md  project_status.md  resume_summary.md  workflow.md
examples/external_method_repo/: README.md  train.py
examples/smopca_minimal/: README.md  project.yaml
examples/toy_regression/: README.md  expected_report.md  project.yaml  sample_dataset.csv
inputs/datasets/: README.md
inputs/metrics/: README.md  metrics.template.yaml
inputs/papers/: README.md
inputs/repos/: README.md
outputs/: report.md
paperpilot/: __init__.py  __main__.py  cli.py
paperpilot/agents/: __init__.py  adapter_planner.py  base.py  baseline_builder.py  baseline_planner.py  code_scanner.py  consistency_checker.py  dataset_inspector.py  evaluation_agent.py  experiment_designer.py  paper_reader.py  repo_inspector.py  report_generator.py  report_writer.py  result_analyst.py  runner_planner.py
paperpilot/baselines/: __init__.py  adapters.py  linear_regression_baseline.py  mean_baseline.py  registry.py
paperpilot/core/: __init__.py  config.py  io.py  workspace.py
paperpilot/metrics/: __init__.py  registry.py  regression.py
tests/: test_agents.py  test_baseline_registry.py  test_config.py  test_metrics_config.py  test_repo_scanner.py  test_workflow_smoke.py
(+7 files in other folders)
