[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperpilot-agent"
version = "0.1.0"
description = "A local, deterministic multi-agent workflow for research baseline and benchmark planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
paperpilot = "paperpilot.cli:main"

[tool.setuptools.packages.find]
include = ["paperpilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
